[package]
name = "html2md"
version = "0.1.0"
edition = "2021"
description = "Production-grade CLI tool to convert web pages to clean Markdown"
authors = ["Developer"]
license = "MIT"

[[bin]]
name = "html2md"
path = "src/main.rs"

[lib]
name = "html2md"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client with rustls
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "zstd"], default-features = false }

# Headless browser for JS rendering
headless_chrome = "1.0"

# HTML parsing
scraper = "0.20"
html5ever = "0.26"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
url = "2.5"
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
